--- a/src/pages/Goal.css
+++ b/src/pages/Goal.css
@@ -1,8 +1,17 @@
 .activity-title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 16px;
-  }
+  font-size: 26px;
+  font-weight: 600; 
+  color: #333; 
+  margin-bottom: 20px; 
+  letter-spacing: 0.5px; 
+  text-transform: capitalize;
+  font-family: 'Arial', sans-serif; 
+  justify-content: center;
+  display: flex;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #c7c6c6;
+}
+
   
   .activity-list {
     margin-bottom: 24px;
@@ -14,39 +23,50 @@
     gap: 12px;
   }
 
+  /* Estilo para boton de imagenes */
+  .custom-file-upload {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: black; /* Color azul de Ionic */
+    color: white;
+    border-radius: 8px;
+    cursor: pointer;
+    text-align: center;
+    font-weight: bold;
+    transition: background 0.3s ease;
+  }
 
+
+ 
+  /* Estilo para el botón de actividad */
   .activity-button {
     --background: black;
     --color: white;
-    --border-radius: 8px;
-    font-size: 16px;
+    --border-radius: 60px;
+    font-size: 18px;
     font-weight: bold;
     padding: 12px;
     text-transform: uppercase;
-    transition: background-color 0.3s ease;
+
   }
   
-  .activity-button:hover {
-    --background: #333;
-  }
-  
-  .activity-button:active {
-    --background: #555;
-  }
-  
-  
+
   .product-img {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     object-fit: cover;
-    border-radius: 8px;
+    border-radius: 10px;
     margin-top: 10px;
+    margin-right: 20px;
   }
   
   .activity-label {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    
   }
   .activity-input{
     width: 100%;
@@ -60,12 +80,13 @@
   }
   
   .activity-name {
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
+    font-weight: bold;
   }
   
   .activity-description {
-    font-size: 14px;
+    font-size: 15px;
     color: #666;
   }
   
@@ -77,7 +98,7 @@
   .activity-value {
     margin-left: auto;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
     margin-top: 20px;
     color: #000;
   }
@@ -104,7 +125,7 @@
   gap: 10px; /* Espaciado entre los inputs */
 }
 
-.form-section {
+.form-section-total {
   display: flex;
   flex-direction:row;
 }
@@ -125,4 +146,29 @@
   color: #333;
 }
 
-/* Para asegurar que los elementos del IonList se vean como filas de una tabla */
+
+
+
+/* Estilos para la lista de productos con scroll */
+.activity-list {
+  max-height: 90vh; /* Define la altura máxima de la lista */
+  overflow-y: auto; /* Permite el scroll vertical */
+}
+
+/* Estilos para el div con el total y el botón de creación */
+.fixed-footer {
+  position: sticky;
+  bottom: 0;
+  background-color: white;
+  padding: 16px;
+  box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 10; /* Asegura que esté sobre otros elementos */
+}
+
+/* Añadir un poco de separación entre el footer y los productos */
+.activity-list {
+  margin-bottom:100%; /* Asegura que la lista no se oculte detrás del footer */
+}
+
+
+
