--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,5 +1,16 @@
 .dashboard-title {
     text-align: center;
+    font-size: 26px;
+    font-weight: 600; 
+    color: #333; 
+    margin-bottom: 20px; 
+    letter-spacing: 0.5px; 
+    text-transform: capitalize;
+    font-family: 'Arial', sans-serif; 
+    display: flex;
+    padding-bottom: 10px;
+    padding-top : 20px;
+    padding-left: 80px ;
   }
   
   .metrics {
