--- a/src/pages/Expenses.css
+++ b/src/pages/Expenses.css
@@ -11,3 +11,24 @@
     padding-bottom: 10px;
     border-bottom: 1px solid #c7c6c6;
   }
+
+  .add-button {
+    --background: black;
+    --color: white;
+    --border-radius: 60px;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px;
+    text-transform: uppercase;
+
+  }
+  
+
+  .fixed-footer {
+    position: sticky;
+    bottom: 0;
+    background-color: white;
+    padding: 16px;
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 10; /* Asegura que esté sobre otros elementos */
+  }
