--- a/src/pages/Goal.css
+++ b/src/pages/Goal.css
@@ -14,13 +14,17 @@
 
   
   .activity-list {
+    
     margin-bottom: 24px;
   }
   
   .activity-item {
+    margin-bottom:  20px;
     display: flex;
     align-items: flex-start;
-    gap: 12px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.152);
+    padding: 5px;
+    border-radius: 10px;
   }
 
   /* Estilo para boton de imagenes */
@@ -51,15 +55,6 @@
   }
   
 
-  .product-img {
-    width: 80px;
-    height: 80px;
-    object-fit: cover;
-    border-radius: 10px;
-    margin-top: 10px;
-    margin-right: 20px;
-  }
-  
   .activity-label {
     display: flex;
     flex-direction: column;
@@ -109,14 +104,7 @@
     display: flex;
   }
   
-  .preview-img {
-    width: 100%;
-    max-height: 200px;
-    object-fit: contain;
-    margin-top: 10px;
-    border-radius: 8px;
-  }
-  
+
 
   /* Asegurar que los IonInput estén alineados */
 .form-container {
@@ -157,12 +145,32 @@
 
 /* Estilos para el div con el total y el botón de creación */
 .fixed-footer {
-  position: sticky;
-  bottom: 0;
+  position: fixed; /* <-- cambia sticky por fixed */
+  top: 0; /* Cambia el top a auto */
+  left: 0;
+  width: 100%; /* que ocupe todo el ancho */
   background-color: white;
-  padding: 16px;
+  padding: 20px;
   box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
-  z-index: 10; /* Asegura que esté sobre otros elementos */
+  z-index: 10;
+
+}
+
+.fixed-total {
+
+  width: 100%; /* que ocupe todo el ancho */
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.134);
+  z-index: 10;
+  border-radius: 10px;
+}
+  
+.floating-button {
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+  z-index: 100; /* para que quede arriba de todo */
 }
 
 /* Añadir un poco de separación entre el footer y los productos */
