--- a/src/pages/Goal.css
+++ b/src/pages/Goal.css
@@ -49,7 +49,6 @@
     --border-radius: 60px;
     font-size: 18px;
     font-weight: bold;
-    padding: 12px;
     text-transform: uppercase;
 
   }
@@ -77,7 +76,6 @@
   .activity-name {
     font-size: 16px;
     font-weight: 500;
-    font-weight: bold;
   }
   
   .activity-description {
@@ -92,10 +90,10 @@
   
   .activity-value {
     margin-left: auto;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 18px;
-    margin-top: 20px;
-    color: #000;
+    margin-top: 18px;
+    color: #717171;
   }
   
   .form-section {
